# OpenCL-Wrapper

./: 16S.ipynb  CMakeLists.txt  FindOpenCL.cmake  example1.cpp  makefile  ocl.cpp
src/: example2.cpp  ocl.cpp
